sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:6: error: not found: value n
  while(ecart>1 || n==1 ){
                   ^