sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {

  var ecart = getNombreValeurs()

  while(ecart>1 || n==1 ){
    var n=0
    if (ecart>1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    var i=0
    while (i+ecart<getNombreValeurs()){
      if (plusPetit(i,i+ecart)==true){
        echange(i,i+ecart)
        i=i+1
        n=1
      }
    }

  }
}